fix: general fixes
